--- a/application1/app/public/angular-app/game-list/games.html
+++ b/application1/app/public/angular-app/game-list/games.html
@@ -5,7 +5,7 @@
 </br>
 
 <ul style="font-size:1vw">
-    <li ng-repeat="game  in vm.games">{{game.title}}</li>
+    <li ng-repeat="game  in vm.games" ><a ng-href={{"http://localhost:5000/#/game/"+game._id}}>{{game.title}}</a></li>
 </ul>
 
 <form name="vm.gameForm" ng-submit="vm.addGame()" >
@@ -14,24 +14,24 @@
 
     Title: <input type="text" name="title" required ng-model="vm.newGameTitle" style="color:black"/><BR/>
 
-    Price: <input type="text" name="price" required ng-model="vm.newGamePrice" style="color:black"/><BR/>
+    Price: <input type="number" name="price" required ng-model="vm.newGamePrice" style="color:black"/><BR/>
 
-    Year of Publication: <input type="text" name="year" required ng-model="vm.newGameYear" style="color:black"/><BR/>
+    Year of Publication: <input type="number" name="year" required ng-model="vm.newGameYear" style="color:black"/><BR/>
 
-    Rating: <input type="text" name="rating" required ng-model="vm.newGameRating" style="color:black"/><BR/>
+    Rating: <input type="number" name="rating" required ng-model="vm.newGameRating" style="color:black"/><BR/>
 
-    Minimum Number of Players: <input type="text" name="minPlayers" required ng-model="vm.newGameMinPlayers" style="color:black"/>
+    Minimum Number of Players: <input type="number" name="minPlayers" required ng-model="vm.newGameMinPlayers" style="color:black"/>
 
     <span ng-show="vm.gameForm.minPlayers.$dirty && vm.gameForm.minPlayers.$invalid && vm.gameForm.isSubmitted" style="color:black">Minimum players must be at least 1.</span>
 
     <BR/>
 
-    Maximum Number of Players: <input type="text" name="maxPlayers" required ng-model="vm.newGameMaxPlayers" style="color:black"/><BR/>
+    Maximum Number of Players: <input type="number" name="maxPlayers" required ng-model="vm.newGameMaxPlayers" style="color:black"/><BR/>
 
-    Minimum Recommended Player Age: <input type="text" name="minAge" required ng-model="vm.newGameMinAge" style="color:black"/><BR/>
+    Minimum Recommended Player Age: <input type="number" name="minAge" required ng-model="vm.newGameMinAge" style="color:black"/><BR/>
 
     Designer name: <input type="text" name="designer" required ng-model="vm.newGameDesigner" style="color:black"/><BR/>
 
     <button type="submit" class="btn-success">Add Game</button><BR/>
-
+    
 </form>
