--- a/application2/public/angular-app/martialArt-display/martialArt.html
+++ b/application2/public/angular-app/martialArt-display/martialArt.html
@@ -1,5 +1,6 @@
 
 <H1 class="bigTitle"> Informations about <span class="mainTitle">{{MADisplayController.martialArt.name}}</span>
+    <span >        <button type="submit" class="btn-success" ng-click="MADisplayController.deleteMart(MADisplayController.martialArt._id)">Delete Martial Art</button></span>
 <BR/>
 <BR/>
 </H1>
